# Project-Hunter

./: .gitignore  AGENT_RULES.md  ANTI_BIAS.md  BACKTEST_PROTOCOL.md  CATALYST_TRACKER.md  CHANGELOG.md  COMPETITION_ENGINE.md  CONFIDENCE_MODEL.md  DATA_PIPELINE.md  DATA_SOURCES.md  EXIT_ENGINE.md  FAILURE_DATABASE.md  HISTORICAL_DATABASE.md  HUNTER_ALGORITHM.md  HUNTER_ENGINE.md  LEARNING_ENGINE.md  MACRO_ENGINE.md  MARKET_CYCLE_ENGINE.md  MISPRICING_ENGINE.md  MISSION.md  NARRATIVE_ENGINE.md  PATTERN_MATCHING.md  PORTFOLIO_ENGINE.md  POSITION_SIZING.md  PROBABILITY_MODEL.md  README.md  REPORT_TEMPLATE.md  RESEARCH_PROTOCOL.md  REVENUE_ENGINE.md  RISK_ENGINE.md  SCORING_ENGINE.md  SEARCH_STRATEGY.md  SMART_MONEY.md  SYSTEM_PROMPT.md  TASK_QUEUE.md  TOKENOMICS_ENGINE.md  VALUATION_ENGINE.md  WATCHLIST_ENGINE.md  WEIGHT_MODEL.md  WHALE_TRACKER.md  (+2 more)
build_backend/: project_hunter_build.py
configs/: acquisition.yaml  automation.yaml  capital_rotation.yaml  dashboard.yaml  developer_engine.yaml  discovery.yaml  experimental_persistence.yaml  governance_spaces.yaml  historical_benchmarks.yaml  historical_projects.yaml  historical_validation.yaml  intelligence_fusion.yaml  investment_committee.yaml  macro.yaml  macro_engine.yaml  market_fact_sources.yaml  market_validation.yaml  market_validation_persistence.yaml  narrative_engine.yaml  narrative_sources.yaml  news_engine.yaml  onchain.yaml  onchain_engine.yaml  opportunity.yaml  opportunity_timing.yaml  patterns.yaml  pipeline_persistence.yaml  plugins.yaml  prediction_evaluation_persistence.yaml  probability.yaml  project_domains.yaml  project_identifiers.yaml  protocol_engine.yaml  providers.yaml  social_engine.yaml  technology_graph.yaml  technology_necessity.yaml  tokenomics_sources.yaml  value_capture_sources.yaml  weights.yaml  (+2 more)
data/: data_ops.sqlite
docs/: AI_REVIEW_PROTOCOL.md  ANALYTICAL_AUTHORITY_REGISTRY.md  ANALYTICAL_STORE_READINESS.md  ARCHITECTURAL_INVENTORY.md  AUTOMATION_AND_SCHEDULER.md  CANONICAL_ARCHITECTURE_MAP.md  CANONICAL_MARKET_VALIDATION_PERSISTENCE.md  CANONICAL_PREDICTION_EVALUATION.md  CANONICAL_RUNTIME_ARCHITECTURE.md  CI.md  CODEX_IMPLEMENTATION_GUIDE.md  COMPETITIVE_INTELLIGENCE.md  DASHBOARD.md  DASHBOARD_ARCHITECTURE.md  DATA_SUFFICIENCY.md  DETERMINISTIC_EXECUTION_IDENTITY.md  DEVELOPER_INTELLIGENCE_ENGINE.md  DEVELOPMENT_GOVERNANCE.md  EVIDENCE_INTELLIGENCE_LAYER.md  EXPERIMENTAL_DERIVED_REASONING_PERSISTENCE.md  EXPERIMENTAL_OPPORTUNITY_FACTOR_AUTHORITY.md  EXPERIMENTAL_OPPORTUNITY_PERSISTENCE.md  GLOBAL_DISCOVERY_AND_CANDIDATE_REGISTRY.md  HISTORICAL_STORE_PRESERVATION.md  HUNTER_ARCHITECTURE_MANIFEST.md  HUNTER_ARCHITECTURE_SPEC.md  HUNTER_CORE_ARCHITECTURE_BLUEPRINT.md  HUNTER_IMPLEMENTATION_CONTRACT.md  HUNTER_ROADMAP.md  HUNTER_V2.7_IMPLEMENTATION_PROMPT.md  INTELLIGENCE_ENGINE_FRAMEWORK.md  INTELLIGENCE_FUSION_LAYER.md  INTELLIGENCE_LAYER.md  INVESTMENT_COMMITTEE_ENGINE.md  INVESTMENT_COMMITTEE_ENGINE_ARCHITECTURE.md  JSONL_SCHEMA_AND_REPLAY.md  MACRO_INTELLIGENCE_ENGINE.md  NARRATIVE_INTELLIGENCE_ENGINE.md  NEWS_INTELLIGENCE_ENGINE.md  ONCHAIN_CAPITAL_FLOW.md  (+20 more)
requirements/: ci-constraints.txt
tests/: test_acquisition.py  test_acquisition_engine_sources.py  test_analytical_record_contract.py  test_analytical_store_health.py  test_auth.py  test_automation.py  test_backtesting_calibration.py  test_canonical_market_validation_persistence.py  test_coingecko_provider.py  test_committee_authority_final_e2e.py  test_committee_authority_resolution.py  test_committee_authority_vote_persistence_e2e.py  test_committee_final_blockers.py  test_committee_generic_sql_output.py  test_committee_production_composition.py  test_competitive_conflicts.py  test_competitive_inputs.py  test_competitive_peer_sets.py  test_competitive_phase1.py  test_competitive_phase8.py  test_competitive_repository.py  test_corpus_authority.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_prediction_evaluation.py  test_data_ops.py  test_decision_explainability.py  test_defillama_provider.py  test_execution_identity.py  (+73 more)
(+620 files in other folders)
