[build-system]
requires = ["hatchling"]
build-backend = "project_hunter_build"
backend-path = ["build_backend"]

[project]
name = "project-hunter"
version = "1.0.0"
description = "Project Hunter architecture and plugin infrastructure."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "black>=24,<25",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "types-PyYAML>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hunter"]

[project.entry-points."hunter.plugins"]
developer-intelligence = "hunter.intelligence.engines.developer:create_plugin"
macro-intelligence = "hunter.intelligence.engines.macro:create_plugin"
narrative-intelligence = "hunter.intelligence.engines.narrative:create_plugin"
news-intelligence = "hunter.intelligence.engines.news:create_plugin"
onchain-intelligence = "hunter.intelligence.engines.onchain:create_plugin"
protocol-intelligence = "hunter.intelligence.engines.protocol:create_plugin"
social-intelligence = "hunter.intelligence.engines.social:create_plugin"
whale-intelligence = "hunter.intelligence.engines.whale:create_plugin"

[project.scripts]
hunter = "hunter.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
disable_error_code = [
  "arg-type",
  "assignment",
  "attr-defined",
  "operator",
  "type-var",
  "union-attr",
  "var-annotated",
]
